# Library

./: README.md  pyproject.toml
src/QMacroDetector/: Response.py  __init__.py  indicators.py  loss_caculation.py  macro_dectector.py  make_sequence.py
src/QMacroDetector/assets/pattern_game/: config.json  data.json  scaler.pkl
src/macro_detector/: __init__.py  indicators.py  macro_dectector.py  make_gauss.py
src/macro_detector/assets/: config.json  model.pt  scaler.pkl
